Update for Production, comment out unworking buttons, logger no longer visible in production mode

--- a/app/assets/stylesheets/home/home.scss
+++ b/app/assets/stylesheets/home/home.scss
@@ -7,7 +7,7 @@
     justify-content: flex-end;
     height: 780px;
     width: 100%;
-    background-color: #97c58c;
+    background-color: $bg-light-grey;
     z-index: 1;
 
     h1 {
